# obs-aruco-tracker

./: CHANGELOG.rst  CMakeLists.txt  PKGBUILD  README.md  README.rst
arduino/: arduino.ino
src/: obs-tracker.c  serial-linux.c  serial-linux.h  serial-windows.cpp  serial-windows.h  serial.c  serial.h  tracker-filter.cpp
stl/: Base_Box.stl  Bottom_plate.stl  Cam_Bracket_MS_Lifecam.stl  Gimbal_Bracket.stl  Servo_Bracket.stl  Top_plate.stl
